spent way too much time fixing a stupidly simple sorting issue. Was handling the wrong block of code for some reason

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,9 +7,9 @@
 
 
 body {
+  background: #F6F0E7;
   color: #6B5852;
   font-family: serif; 
-  background: #F6F0E7; 
   font-size: 1.25em; 
   letter-spacing: 0.5px; 
 }
@@ -38,12 +38,14 @@ h3 { font-size: 1.1em }
 bq.splash {   font-size: 1.25em; }
 bq.splash i { font-size: 0.95em; }
 
+img {
+  mix-blend-mode: darken; 
+  filter: contrast(1.3);
+}
 img.portrait {
   padding: 0.5em 0; 
   margin: -1em auto; 
   width: 60%; 
-  mix-blend-mode: darken; 
-  filter: contrast(1.3);
 }
 
 
@@ -117,3 +119,9 @@ text-decoration: none;
 footer {
   height: 4em; 
 }
+
+/***********************/
+/***** NOTARY PAGE *****/
+/***********************/
+
+
